intel/bench_214/extr_.opensslcryptoeccurve25519.c_fe_sq2_with_main/log.txt
bench_214/extr_.opensslcryptoeccurve25519.c_fe_sq2_with_main/extr_.opensslcryptoeccurve25519.c_fe_sq2_with_main.c:164:12: error: default initialization of an object of const type 'const fe' (aka 'int *const')
  const fe f;
           ^
             = nullptr
1 error generated.
HLS FPGA Parse FAILED.
